pkl-core/src/test/files/LanguageSnippetTests/input/errors/parser4.pkl
res1 = """some string
res2 = 2